--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -135,6 +135,7 @@ SaveArticle
             data: article,
             dataType: 'json',
             success: function (res) {
+                console.log(article);
                 console.log(res)
             },
             error: function (err) {
