--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,14 +8,14 @@
 GetAll
 <button id="get">get</button>
 <div class="convert"></div>
-<button id="Find">FindArticleWithColor</button>
+<button id="Find">FindUserByArticle</button>
 <div class="cone"></div>
 <div class="asd"></div>
     <button id="findByColor">FindByColor</button>
 SaveUser
 <input type="text" id="name" placeholder="name">
 <input type="text" id="age" placeholder="age">
-<button id="saveUser">save</button>
+<button id="saveUser">saveUser</button>
 
 SaveArticle
 <input type="text" id="text" placeholder="text">
@@ -27,7 +27,7 @@ SaveArticle
     <option value="BLUE">blue</option>
 </select>
 </p>
-<button id="saveArticle">save</button>
+<button id="saveArticle">saveArticle</button>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
